# Copyright 2022 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//nisaba/scripts/utils:grammars.bzl",
    "nisaba_compile_multi_grm_py",
    "nisaba_grm_regression_test",
)

package(default_visibility = ["//nisaba/scripts/brahmic:__subpackages__"])

licenses(["notice"])

py_library(
    name = "util",
    srcs = ["util.py"],
    deps = [
        "@org_opengrm_pynini//pynini",
        "@org_opengrm_pynini//pynini/lib:byte",
    ],
)

py_library(
    name = "iso_inventory",
    srcs = ["iso_inventory.py"],
    deps = [
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "phoneme_inventory",
    srcs = ["phoneme_inventory.py"],
    deps = [
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "ltn_inventory",
    srcs = ["ltn_inventory.py"],
    deps = [
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "rewrite_functions",
    srcs = ["rewrite_functions.py"],
    deps = [
        ":iso_inventory",
        ":ltn_inventory",
        ":phoneme_inventory",
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "iso2typ",
    srcs = ["iso2typ.py"],
    deps = [
        ":iso_inventory",
        ":rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "iso2typ_test_py",
    srcs = ["iso2typ_test.py"],
    main = "iso2typ_test.py",
    deps = [
        ":iso2typ",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "iso2txn",
    srcs = ["iso2txn.py"],
    deps = [
        ":iso2typ",
        ":iso_inventory",
        ":phoneme_inventory",
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "iso2txn_test_py",
    srcs = ["iso2txn_test.py"],
    main = "iso2txn_test.py",
    deps = [
        ":iso2txn",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "phon_ops",
    srcs = ["phon_ops.py"],
    deps = [
        ":phoneme_inventory",
        ":rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "iso2txn_ops",
    srcs = ["iso2txn_ops.py"],
    deps = [
        ":iso_inventory",
        ":phon_ops",
        ":phoneme_inventory",
        ":rewrite_functions",
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "iso2txn_ops_test_py",
    srcs = ["iso2txn_ops_test.py"],
    main = "iso2txn_ops_test.py",
    deps = [
        ":iso2txn_ops",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "txn2ltn",
    srcs = ["txn2ltn.py"],
    deps = [
        ":iso_inventory",
        ":ltn_inventory",
        ":phoneme_inventory",
        ":rewrite_functions",
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "iso2ltn_ops",
    srcs = ["iso2ltn_ops.py"],
    deps = [
        ":iso_inventory",
        ":phon_ops",
        ":phoneme_inventory",
        ":rewrite_functions",
        ":txn2ltn",
        ":util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "iso2ltn_ops_test_py",
    srcs = ["iso2ltn_ops_test.py"],
    main = "iso2ltn_ops_test.py",
    deps = [
        ":iso2ltn_ops",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "txn2ipa",
    srcs = ["txn2ipa.py"],
    deps = [
        ":phoneme_inventory",
        ":rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "txn2ipa_test_py",
    srcs = ["txn2ipa_test.py"],
    main = "txn2ipa_test.py",
    deps = [
        ":txn2ipa",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

nisaba_compile_multi_grm_py(
    name = "hi_e2e",
    outs = {
        "byte": "hi_e2e.far",
        "utf8": "hi_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":iso2ltn_ops",
        ":iso2txn",
        ":iso2txn_ops",
        ":phoneme_inventory",
        ":rewrite_functions",
        ":txn2ipa",
        ":txn2ltn",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_grm_regression_test(
    name = "hi_e2e_test",
    grammar = ":hi_e2e",
)

nisaba_grm_regression_test(
    name = "hi_e2e_utf8_test",
    grammar = ":hi_e2e_utf8",
    test_file = "testdata:hi_e2e.tsv",
    token_type = "utf8",
)

nisaba_compile_multi_grm_py(
    name = "kn_e2e",
    outs = {
        "byte": "kn_e2e.far",
        "utf8": "kn_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":iso2ltn_ops",
        ":iso2txn",
        ":iso2txn_ops",
        ":txn2ipa",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_grm_regression_test(
    name = "kn_e2e_test",
    grammar = ":kn_e2e",
)

nisaba_grm_regression_test(
    name = "kn_e2e_utf8_test",
    grammar = ":kn_e2e_utf8",
    test_file = "testdata:kn_e2e.tsv",
    token_type = "utf8",
)

nisaba_compile_multi_grm_py(
    name = "ml_e2e",
    outs = {
        "byte": "ml_e2e.far",
        "utf8": "ml_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":iso2ltn_ops",
        ":iso2txn",
        ":iso2txn_ops",
        ":phon_ops",
        ":phoneme_inventory",
        ":rewrite_functions",
        ":txn2ipa",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_grm_regression_test(
    name = "ml_e2e_test",
    grammar = ":ml_e2e",
)

nisaba_grm_regression_test(
    name = "ml_e2e_utf8_test",
    grammar = ":ml_e2e_utf8",
    test_file = "testdata:ml_e2e.tsv",
    token_type = "utf8",
)

nisaba_compile_multi_grm_py(
    name = "te_e2e",
    outs = {
        "byte": "te_e2e.far",
        "utf8": "te_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":iso2ltn_ops",
        ":iso2txn",
        ":iso2txn_ops",
        ":txn2ipa",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_grm_regression_test(
    name = "te_e2e_test",
    grammar = ":te_e2e",
)

nisaba_grm_regression_test(
    name = "te_e2e_utf8_test",
    grammar = ":te_e2e_utf8",
    test_file = "testdata:te_e2e.tsv",
    token_type = "utf8",
)
